--- a/activites-sportives.html
+++ b/activites-sportives.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activités Sportives</title>
-    <link rel="stylesheet" href="styles-act.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
@@ -21,50 +21,41 @@
                 <a href="sports-competition.html">Les Sports de compétition</a>
                 <a href="salle-de-sport-omnes.html">Salle de sport Omnes</a>
             </div>
-            <button onclick="location.href='recherche.html'">Recherche</button>
-            <button onclick="location.href='rendez-vous.html'">Rendez-vous</button>
-            <button onclick="location.href='compte.html'">Votre Compte</button>
+            <button id="search-button">Recherche</button>
+            <button id="appointment-button">Rendez-vous</button>
+            <div id="appointment-dropdown" class="dropdown-content">
+                <a href="prendre-rendez-vous.html">Prendre un rendez-vous</a>
+                <a href="mes-rendez-vous.html">Mes rendez-vous</a>
+            </div>
+            <button id="account-button">Votre Compte</button>
+            <div id="account-dropdown" class="dropdown-content">
+                <a href="connexion.html">Se connecter</a>
+                <a href="inscription.html">S'inscrire</a>
+            </div>
         </nav>
         <section class="section" id="main-section">
             <h2>Activités Sportives</h2>
-            <!-- Carrousel des activités sportives -->
-            <div id="carrousel">
-                <div class="carousel-container">
-                    <ul> 
-                        <li>
-                            <a href="musculation.html">
-                                <img src="C:\MAMP\htdocs\piscine\img carroussel actsport\shutterstock_673719400-min-890x606.jpg" alt="Musculation">
-                                <span>Musculation</span>
-                            </a>
-                        </li>  
-                        <li>
-                            <a href="fitness.html">
-                                <img src="C:\MAMP\htdocs\piscine\img carroussel actsport\1920_1662117740_fungroupfitnessideas.jpeg" alt="Fitness">
-                                <span>Fitness</span>
-                            </a>
-                        </li> 
-                        <li>
-                            <a href="biking.html">
-                                <img src="C:\MAMP\htdocs\piscine\img carroussel actsport\4fd3abd7e48f068f782e605c40fd6dd7.jpg" alt="Biking">
-                                <span>Biking</span>
-                            </a>
-                        </li> 
-                        <li>
-                            <a href="cardio-training.html">
-                                <img src="C:\MAMP\htdocs\piscine\img carroussel actsport\OIP.jpeg" alt="Cardio-Training">
-                                <span>Cardio-Training</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="cours-collectifs.html">
-                                <img src="C:\MAMP\htdocs\piscine\img carroussel actsport\R.jpeg" alt="Cours Collectifs">
-                                <span>Cours Collectifs</span>
-                            </a>
-                        </li> 
-                    </ul>
+            <div class="sports-grid">
+                <div class="sport-card" data-url="musculation.html">
+                    <img src="C:/MAMP/htdocs/piscine/img carroussel actsport/shutterstock_673719400-min-890x606.jpg" alt="Musculation">
+                    <span>Musculation</span>
                 </div>
-                <div class="prev">&lt;</div>
-                <div class="next">&gt;</div>
+                <div class="sport-card" data-url="fitness.html">
+                    <img src="C:/MAMP/htdocs/piscine/img carroussel actsport/1920_1662117740_fungroupfitnessideas.jpeg" alt="Fitness">
+                    <span>Fitness</span>
+                </div>
+                <div class="sport-card" data-url="biking.html">
+                    <img src="C:/MAMP/htdocs/piscine/img carroussel actsport/4fd3abd7e48f068f782e605c40fd6dd7.jpg" alt="Biking">
+                    <span>Biking</span>
+                </div>
+                <div class="sport-card" data-url="cardio-training.html">
+                    <img src="C:/MAMP/htdocs/piscine/img carroussel actsport/OIP.jpeg" alt="Cardio-Training">
+                    <span>Cardio-Training</span>
+                </div>
+                <div class="sport-card" data-url="cours-collectifs.html">
+                    <img src="C:/MAMP/htdocs/piscine/img carroussel actsport/R.jpeg" alt="Cours Collectifs">
+                    <span>Cours Collectifs</span>
+                </div>
             </div>
         </section>
         <footer class="footer">
@@ -87,38 +78,48 @@
             </div>
         </footer>
     </div>
-    <script type="text/javascript">
+    <script src="js/common.js"></script>
+    <script>
         $(document).ready(function() {
-            var $items = $('#carrousel ul li');
-            var max = $items.length;
-            var i = 0;
-
-            $items.hide();
-            $items.eq(i).show();
-
-            $('.next').click(function () {
-                $items.eq(i).hide();
-                i = (i + 1) % max;
-                $items.eq(i).show();
+            $('.sport-card').on('click', function() {
+                window.location.href = $(this).data('url');
             });
-
-            $('.prev').click(function () {
-                $items.eq(i).hide();
-                i = (i - 1 + max) % max;
-                $items.eq(i).show();
-            });
-
-            function slideItems() {
-                setTimeout(function() {
-                    $items.eq(i).hide();
-                    i = (i + 1) % max;
-                    $items.eq(i).show();
-                    slideItems();
-                }, 4000);
-            }
-
-            slideItems();
         });
-    </script>
+   // common.js
+document.addEventListener('DOMContentLoaded', function () {
+    const browseButton = document.getElementById('browse-button');
+    const browseDropdown = document.getElementById('browse-dropdown');
+    const appointmentButton = document.getElementById('appointment-button');
+    const appointmentDropdown = document.getElementById('appointment-dropdown');
+    const accountButton = document.getElementById('account-button');
+    const accountDropdown = document.getElementById('account-dropdown');
+
+    browseButton.addEventListener('click', function () {
+        browseDropdown.style.display = browseDropdown.style.display === 'block' ? 'none' : 'block';
+    });
+
+    appointmentButton.addEventListener('click', function () {
+        appointmentDropdown.style.display = appointmentDropdown.style.display === 'block' ? 'none' : 'block';
+    });
+
+    accountButton.addEventListener('click', function () {
+        accountDropdown.style.display = accountDropdown.style.display === 'block' ? 'none' : 'block';
+    });
+
+    window.addEventListener('click', function (event) {
+        if (!event.target.matches('#browse-button')) {
+            browseDropdown.style.display = 'none';
+        }
+        if (!event.target.matches('#appointment-button')) {
+            appointmentDropdown.style.display = 'none';
+        }
+        if (!event.target.matches('#account-button')) {
+            accountDropdown.style.display = 'none';
+        }
+    });
+});
+</script>
+
 </body>
 </html>
+
