--- a/accueil.html
+++ b/accueil.html
@@ -49,13 +49,13 @@
 
             slideItems();
         });
-    </script>  
+    </script>
 </head>
 <body>
     <div class="wrapper">
         <header class="header">
             <h1>Sportify: Consultation Sportive</h1>
-            <img src="C:\MAMP\htdocs\piscine\images globales\Capture d'écran 2024-05-27 174921.png" alt="Logo Sportify">
+            <img src="C:/MAMP/htdocs/piscine/images globales/Capture d'écran 2024-05-27 174921.png" alt="Logo Sportify">
         </header>
         <nav class="navigation">
             <button id="accueil-button">Accueil</button>
@@ -82,60 +82,60 @@
             <div id="carrousel">
                 <ul> 
                     <li>
-                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\logo-borussia-dortmund-4096.png" alt="Logo Équipe 1 dortmund">
+                        <img src="C:/MAMP/htdocs/piscine/img carroussel score/logo-borussia-dortmund-4096.png" alt="Logo Équipe 1 dortmund">
                         <span>BVB 09</span>
                         <span>2 - 2</span>
                         <span>Bayern</span>
-                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\fc-bayern-munchen-emblem.png" alt="Logo Équipe 2 Bayern">
+                        <img src="C:/MAMP/htdocs/piscine/img carroussel score/fc-bayern-munchen-emblem.png" alt="Logo Équipe 2 Bayern">
                     </li>  
                     <li>
-                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\logo__pxbve6.png" alt="Logo Équipe 3 lyonhand">
+                        <img src="C:/MAMP/htdocs/piscine/img carroussel score/logo__pxbve6.png" alt="Logo Équipe 3 lyonhand">
                         <span>Lyon Handball</span>
                         <span>15 - 10</span>
                         <span>PSG Handball</span>
-                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\OIP.jpeg" alt="Logo Équipe 4 psghand">
+                        <img src="C:/MAMP/htdocs/piscine/img carroussel score/OIP.jpeg" alt="Logo Équipe 4 psghand">
                     </li> 
                     <li>
-                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\Los_Angeles_Lakers_logo.svg.png" alt="Logo Équipe 5 lakers">
+                        <img src="C:/MAMP/htdocs/piscine/img carroussel score/Los_Angeles_Lakers_logo.svg.png" alt="Logo Équipe 5 lakers">
                         <span>Lakers</span>
                         <span>82 - 102</span>
                         <span>Celtics</span>
-                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\Boston-Celtics-Logo-1996-present.png" alt="Logo Équipe 6 Celtics">
+                        <img src="C:/MAMP/htdocs/piscine/img carroussel score/Boston-Celtics-Logo-1996-present.png" alt="Logo Équipe 6 Celtics">
                     </li> 
                     <li>
-                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\real-madrid-c.f.-logo-vector-400x400.png" alt="Logo Équipe 7 real">
+                        <img src="C:/MAMP/htdocs/piscine/img carroussel score/real-madrid-c.f.-logo-vector-400x400.png" alt="Logo Équipe 7 real">
                         <span>Real Madrid</span>
                         <span>0 - 0</span>
                         <span>Barca</span>
-                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\sticker-logo-club-football-fc-barcelone-autocollant-foot-747_800x800.png" alt="Logo Équipe 8 barca">
+                        <img src="C:/MAMP/htdocs/piscine/img carroussel score/sticker-logo-club-football-fc-barcelone-autocollant-foot-747_800x800.png" alt="Logo Équipe 8 barca">
                     </li>
                     <li>
-                        <img src="logo9.png" alt="Logo Équipe 9">
-                        <span>Surnom Équipe 9</span>
-                        <span>3 - 1</span>
-                        <span>Surnom Équipe 10</span>
-                        <img src="logo10.png" alt="Logo Équipe 10">
+                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\Logo-Metropolitans92-768x901.png" alt="Logo Équipe 9 mets">
+                        <span>Metropolitans</span>
+                        <span>82 - 74</span>
+                        <span>Paris Basket</span>
+                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\190909144744-Paris_Basketball.png" alt="Logo Équipe 10 paris basket">
                     </li> 
                     <li>
-                        <img src="logo11.png" alt="Logo Équipe 11">
-                        <span>Surnom Équipe 11</span>
-                        <span>7 - 8</span>
-                        <span>Surnom Équipe 12</span>
-                        <img src="logo12.png" alt="Logo Équipe 12">
+                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\flamengo-logo-png-transparent.png" alt="Logo Équipe 11 flamengo">
+                        <span>Flamengo</span>
+                        <span>3 - 0</span>
+                        <span>Santos</span>
+                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\logo-santos-1536.png" alt="Logo Équipe 12 santos">
                     </li> 
                     <li>
-                        <img src="logo13.png" alt="Logo Équipe 13">
-                        <span>Surnom Équipe 13</span>
-                        <span>2 - 2</span>
-                        <span>Surnom Équipe 14</span>
-                        <img src="logo14.png" alt="Logo Équipe 14">
+                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\AS_Saint-Étienne_logo.svg.png" alt="Logo Équipe 13 asse">
+                        <span>AS Saint-Etienne</span>
+                        <span>0 - 5</span>
+                        <span>Olympique Lyonnais</span>
+                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\OLG.PA-21c14179.png" alt="Logo Équipe 14 OL">
                     </li> 
                     <li>
-                        <img src="logo15.png" alt="Logo Équipe 15">
-                        <span>Surnom Équipe 15</span>
-                        <span>6 - 9</span>
-                        <span>Surnom Équipe 16</span>
-                        <img src="logo16.png" alt="Logo Équipe 16">
+                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\ac-milan-logo-png-transparent.png" alt="Logo Équipe 15 milanac">
+                        <span>AC Milan</span>
+                        <span>1 - 2</span>
+                        <span>Juventus</span>
+                        <img src="C:\MAMP\htdocs\piscine\img carroussel score\logo-juventus-8192.png" alt="Logo Équipe 16 Juve">
                     </li>
                 </ul>
                 <div class="prev">&lt;</div>
@@ -147,22 +147,22 @@
             <h2>Événements Sportifs</h2>
             <div class="articles-container">
                 <div class="article">
-                    <img src="C:\MAMP\htdocs\piscine\img articleaccueil\boxe.jpeg" alt="Événement 1">
+                    <img src="C:/MAMP/htdocs/piscine/img articleaccueil/boxe.jpeg" alt="Événement 1">
                     <h3>Meeting de Boxe</h3>
                     <p>Le meeting de Boxe annuel de Levallois arrive</p>
                 </div>
                 <div class="article">
-                    <img src="C:\MAMP\htdocs\piscine\img articleaccueil\OIP (1).jpeg" alt="Événement 2">
+                    <img src="C:/MAMP/htdocs/piscine/img articleaccueil/OIP (1).jpeg" alt="Événement 2">
                     <h3>Le marathon de Paris</h3>
                     <p>Le marathon de Paris est annoncé, commencez votre préparation ici</p>
                 </div>
                 <div class="article">
-                    <img src="C:\MAMP\htdocs\piscine\img articleaccueil\meetinathle.jpg" alt="Événement 3">
+                    <img src="C:/MAMP/htdocs/piscine/img articleaccueil/meetinathle.jpg" alt="Événement 3">
                     <h3>Meeting d'athlétisme</h3>
                     <p>Découvrez ici toutes les information du meeting d'athlétisme de Perpignan</p>
                 </div>
                 <div class="article">
-                    <img src="C:\MAMP\htdocs\piscine\img articleaccueil\triathlon.png" alt="Événement 4">
+                    <img src="C:/MAMP/htdocs/piscine/img articleaccueil/triathlon.png" alt="Événement 4">
                     <h3>Le triathlon de Bourgogne</h3>
                     <p>Tout ce qu'il faut savoir pour vous préparer au mieux au triathlon</p>
                 </div>
@@ -238,7 +238,7 @@
                 }
             });
 
-            // Close the dropdown if the user clicks outside of it
+            //ferme le menu déroulant
             window.addEventListener('click', function(event) {
                 if (!event.target.matches('#browse-button') && !event.target.matches('#account-button') && !event.target.matches('#appointment-button')) {
                     if (browseDropdown.style.display === 'block') {
@@ -251,6 +251,13 @@
                         accountDropdown.style.display = 'none';
                     }
                 }
+            });
+
+            const searchSubmitButton = document.getElementById('search-submit');
+            searchSubmitButton.addEventListener('click', function() {
+                const searchInput = document.getElementById('search-input').value;
+                alert('Vous avez recherché: ' + searchInput);
+                //ajouter ici la logique pour effectuer la recherche
             });
         });
     </script>
